--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "gatsby-plugin-react-helmet": "^3.3.6",
     "gatsby-plugin-sharp": "^2.6.14",
     "gatsby-source-filesystem": "^2.3.14",
+    "gatsby-source-prismic-graphql": "^3.6.2",
     "gatsby-transformer-sharp": "^2.5.7",
+    "prismic-reactjs": "^1.3.1",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
@@ -40,5 +42,6 @@
   },
   "bugs": {
     "url": "https://github.com/gatsbyjs/gatsby/issues"
-  }
+  },
+  "resolutions": { "gatsby-source-graphql-universal": "3.3.0" }
 }
