--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
     "gatsby": "^2.23.12",
+    "gatsby-cli": "^2.12.66",
     "gatsby-image": "^2.4.9",
     "gatsby-plugin-manifest": "^2.4.14",
     "gatsby-plugin-offline": "^3.2.13",
@@ -43,5 +44,7 @@
   "bugs": {
     "url": "https://github.com/gatsbyjs/gatsby/issues"
   },
-  "resolutions": { "gatsby-source-graphql-universal": "3.3.0" }
+  "resolutions": {
+    "gatsby-source-graphql-universal": "3.3.0"
+  }
 }
