--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "gatsby-source-filesystem": "^2.3.14",
     "gatsby-source-prismic-graphql": "^3.6.2",
     "gatsby-transformer-sharp": "^2.5.7",
+    "lodash": "^4.17.19",
     "prismic-reactjs": "^1.3.1",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
